fix toggle text visibility in dark theme

--- a/src/app/interactions/toggle/toggle.component.scss
+++ b/src/app/interactions/toggle/toggle.component.scss
@@ -16,4 +16,8 @@
     background-color: #ffffff;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+    .dark-theme & {
+        background-color: #111;
+    }
 }
